jinfer: refuse confined arenas at load; Request knobs named as on every face; private locks; lc4j per-request thinking, timeout, budget message
Arenas.requireCrossThread replaces the assert-only probe (2 us, once per load or state; the probe thread stays local, never static). Request, Prepared and Generator.Constraints say maxOutputTokens, reasoningBudget, reasoningBudgetMessage and grammar. MediaEncodingCache, ReplyLanguage, Parallel and Telemetry lock on private ReentrantLocks, not on this. JinferChatRequestParameters carries thinking, timeout and reasoningBudgetMessage per request, as Spring's options already did.